<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="level_prefix">Level: </string>
    <string name="level_prefix_and_level">Level: %d</string>
    <string name="app_name">Dodge</string>
    <string name="about_text">Dodge 1.4.3\n© 2010–2012 Brian Nenninger\nwww.dozingcatsoftware.com/Dodge\n\nMove your blue circle to the green goal zone, avoiding the enemy dots roaming around the field. Steer by tilting the device, or by using the trackball or D-pad. You can also touch the screen to move to that location. When you reach the goal zone, the level will advance, more dots will be added, and the goal will switch to the other end. You have 9 lives in a normal game; free play lives are unlimited and you can continue from the highest level you\'ve previously reached.\n\nUse the menu button to end a game in progress, or to go to the preferences where you can enable or disable tilt control, make the dots change colors continuously, show frames per second, or select a background image from your photos.\n\nContact me with bug reports or comments at bnenning@gmail.com\n\nDodge is open source: http://code.google.com/p/dodge-android\n\nIf you like this game, check out WireGoggles and Vector Pinball in the Android Market.</string>
    <string name="level_initial">Level: 1</string>
    <string name="lives_prefix">Lives: </string>
    <string name="lives_prefix_and_lives">Lives: %s</string>
    <string name="lives_initial">Lives: 9</string>
    <string name="free_play_lives">lots</string>
    <string name="welcome_message">Welcome to Dodge!</string>
    <string name="game_over_message">Game Over</string>
    <string name="best_level">Best Level:</string>
    <string name="best_free_play_level">Free Play Level:</string>
    <string name="new_record_message">New Record!</string>
    <string name="continue_button_label">Continue from Level {0}</string>
    <string name="score_none">None</string>
    <string name="end_game">End Game</string>
    <string name="preferences">Preferences</string>
    <string name="new_game">New Game</string>
    <string name="free_play">Free Play</string>
    <string name="help_about">Help/About</string>
    <string name="continue_free_play">Continue Free Play</string>
    <string name="select_background">Select Background…</string>
</resources>
